--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,10 @@
 
+<% if logged_in? %>
+  <script type="text/javascript">
+    window.currentUser = <%= render('api/users/user.json.jbuilder', user: current_user).html_safe %>
+  </script>
+<% end %>
 
 
 
-
-<div id="root"></div>
+<div id="root">If you see this you're BORKED</div>
