add login and signup to splash, style 60%

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <script type="text/javascript">
+      window.splashimage = "<%= image_url('emma_splash.jpeg') %>"
+    </script>
+
+
     <%= yield %>
   </body>
 </html>
