--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
 
   <body>
     <script type="text/javascript">
-      window.splashimage = "<%= image_url('/babe/emma_splash.jpeg') %>"
-      window.fb1 = "<%= image_url('/fb_icons/fb1.png') %>"
-      window.fb2 = "<%= image_url('/fb_icons/fb2.png') %>"
-      window.fb3 = "<%= image_url('/fb_icons/fb3.png') %>"
+      window.splashimage = "<%= image_url('emma_splash.jpeg') %>"
+      window.fb1 = "<%= image_url('fb1.png') %>"
+      window.fb2 = "<%= image_url('fb2.png') %>"
+      window.fb3 = "<%= image_url('fb3.png') %>"
     </script>
 
 
