--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 
   <body>
     <script type="text/javascript">
-      window.splashimage = "<%= image_url('babe/emma_splash.jpeg') %>"
+      window.splashimage1 = "<%= image_url('babe/emma_splash1.jpeg') %>"
+      window.splashimage2 = "<%= image_url('babe/emma_splash2.png') %>"
+      window.splashimage3 = "<%= image_url('babe/emma_splash3.png') %>"
+      window.splashimage4 = "<%= image_url('babe/emma_splash4.png') %>"
+      window.splashimage5 = "<%= image_url('babe/emma_splash5.png') %>"
       window.fb1 = "<%= image_url('fb_icons/fb1.png') %>"
       window.fb2 = "<%= image_url('fb_icons/fb2.png') %>"
       window.fb3 = "<%= image_url('fb_icons/fb3.png') %>"
