--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -264,42 +264,42 @@ main > div > h3 {
   0% {
     opacity: 1;
   }
-  20% {
+  25% {
     opacity: 0;
   }
-  40% {
+  50% {
     opacity:0;
   }
-  60% {
+  75% {
     opacity:0;
-  }
-  80% {
-    opacity: 1;
   }
   100% {
-    opacity:1;
+    opacity: 1;
   }
+  // 100% {
+  //   opacity:1;
+  // }
 }
 
 .transistor img {
   animation-name: transistorFadeInOut;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  animation-duration: 15s;
+  animation-duration: 20s;
   animation-direction: alternate;
 }
 
 .transistor img:nth-of-type(1) {
-  animation-delay: 12s;
+  animation-delay: 16s;
 }
 .transistor img:nth-of-type(2) {
-  animation-delay: 9s;
+  animation-delay: 12s;
 }
 .transistor img:nth-of-type(3) {
-  animation-delay: 6s;
+  animation-delay: 8s;
 }
 .transistor img:nth-of-type(4) {
-  animation-delay: 3s;
+  animation-delay: 4s;
 }
 .transistor img:nth-of-type(5) {
   animation-delay: 0s;
