add interior nav bar

--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -41,7 +41,7 @@ body {
 }
 
 .loginHeader {;
-  background-color: #3c5997;
+  background-color: #4267b2;
   height: 82px;
   border-bottom: 1px solid darkblue;
   display: flex;
@@ -51,7 +51,7 @@ body {
 .loginBar {
   justify-content: space-between;
   display: flex;
-  width: 1000px
+  width: 940px
 }
 
 /* app/assets/fonts/Klavika-Bold.woff */
