style profile head

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -2,23 +2,24 @@
   background-color: #edf0f5;
   min-height: 1080px;
   height: auto;
-  justify-content: center;
+  // justify-content: center;
 }
 
 #profileHead {
   margin: auto;
   display: flex;
   width: 900px;
-  height: 350px;
+  height: 360px;
   flex-direction: column;
-  justify-content:center;
-  background-color: yellow;
-  border: 1px solid #e9eced;
+  // justify-content:center;
+  background-color: darkgray;
 }
 
 #coverPhoto {
   width: 898px;
-  height: 314px;
+  height: 317px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 
 }
 
@@ -32,33 +33,41 @@
   width: 160px;
   height: 160px;
   z-index: 10;
+  display: flex;
 }
 
 #profileBar {
+  border: 1px solid lightgray;
   width: 900px;
   display: flex;
   height: 44px;
   background-color: white;
   z-index: 3;
-  // align-items: center;
+  align-items: center;
 }
 
 #profileBar > div {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  background-color: white;
   height: 44px;
   width: 220px;
-  border-right: 1px solid #e9eaed;
+  border-left: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  color: #365799;
+  font-family: sans-serif;
+  font-size: 15px
 }
 
 #profileBar > span {
-  background-color: green;
+  background-color: white;
   height: 44px;
   width: 310px;
+  border-bottom: 1px solid lightgray;
   z-index: 1;
 }
+
 
 #coverPhoto > h1 {
   font-family: sans-serif;
@@ -72,14 +81,27 @@
 }
 
 #profilePicUpdateButton {
-  height: 50px;
-  width: 50px;
+  height: 58px;
+  width: 160px;
   background-color: black;
-  opacity: 80%;
+  opacity: .8;
   display: none;
   z-index: 11;
+  margin-top: auto;
+  color: white;
+  display: flex;
 }
 
 #profilePicUpdateButton:hover {
   display: block;
+}
+
+.photoIcon {
+  margin: 5px;
+  height: 25px;
+  width: 25px;
+}
+
+strong {
+  margin: 5px;
 }
