--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       window.fb1 = "<%= image_url('fb_icons/fb1.png') %>"
       window.fb2 = "<%= image_url('fb_icons/fb2.png') %>"
       window.fb3 = "<%= image_url('fb_icons/fb3.png') %>"
+      window.photoIcon = "<%= image_url('fb_icons/photoicon.png') %>"
       window.defaultImage = "<%= image_url('default.png') %>"
     </script>
 
