--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -27,7 +27,9 @@
   position: relative;
   margin-top: 172px;
   margin-left: 30px;
-  border: 4px solid black;
+  border: 4px solid white;
+  // outline: 1px solid lightgray;
+  box-shadow: 0 0 0 1pt #949796;
   border-radius: 4px;
   float: left;
   width: 160px;
@@ -89,7 +91,8 @@
   z-index: 11;
   margin-top: auto;
   color: white;
-  display: flex;
+  // display: flex;
+  // justify-content: space-between;
 }
 
 #profilePicUpdateButton:hover {
@@ -97,11 +100,27 @@
 }
 
 .photoIcon {
-  margin: 5px;
+  margin-left: 8px;
   height: 25px;
   width: 25px;
 }
 
 strong {
-  margin: 5px;
+  margin-left: 12px;
+  // margin-bottom: 40px;
+}
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+#uploadProfButton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
