--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -25,7 +25,7 @@
 
 .profilePic {
   position: relative;
-  margin-top: 105px;
+  margin-top: 101px;
   margin-left: 30px;
   border: 4px solid white;
   // outline: 1px solid lightgray;
@@ -125,7 +125,31 @@ strong {
   align-items: center;
 }
 
-#coverPicUpdateButton {
-  margin-left: 100px;
+#coverProfButton {
+  display: flex;
+  float: left;
+  margin-left: 75px;
   margin-top: 40px;
+  // background-color: black;
+  color: white;
+  visibility: visible;
+  opacity: .74;
+  padding: 2px 8px 2px 0;
+}
+
+#coverProfButton:hover {
+  box-shadow: 0 0 0 1px #fff inset;
+  border-radius: 3px;
+  border-collapse: collapse;
+  opacity: .92;
+}
+
+#coverPicUpdateButton{
+  visibility: hidden;
+}
+
+#coverProfButton > div {
+  margin-left: 6px;
+  margin-top: 7px;
+  font-weight: bold;
 }
