add about card on timeline, add about page on link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       window.fb2 = "<%= image_url('fb_icons/fb2.png') %>"
       window.fb3 = "<%= image_url('fb_icons/fb3.png') %>"
       window.photoIcon = "<%= image_url('fb_icons/photoicon.png') %>"
-      window.defaultImage = "<%= image_url('default.png') %>"
+      window.introIcon = "<%= image_url('fb_icons/bone_icon.png') %>"
     </script>
 
 
