--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,3 +1,7 @@
+#root {
+  font-family: sans-serif;
+}
+
 #mainFull {
   background-color: #edf0f5;
   min-height: 1080px;
@@ -7,6 +11,7 @@
 
 #profileHead {
   margin: auto;
+  margin-bottom: 12px;
   display: flex;
   width: 900px;
   height: 360px;
@@ -152,4 +157,119 @@ strong {
   margin-left: 6px;
   margin-top: 7px;
   font-weight: bold;
+}
+
+.profileBottomMain {
+  width: 900px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.profilePageSectionLeft {
+  width: 330px;
+}
+
+.profilePageSectionRight {
+  width: 530px;
+}
+
+.profileCard {
+  // margin-top: 12px;
+  border: 1px solid darkgray;
+  border-radius: 3px;
+  padding: 13px;
+  background-color: white;
+}
+
+.topOfCard {
+  display: flex;
+  align-items: center;
+  height: 40px;
+}
+
+.cardIcon {
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+}
+
+.topOfCard > h1 {
+  font-family: sans-serif;
+  margin-left: 7px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.topCard {
+  padding-bottom: 12px;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid gray;
+}
+
+.topCard > h4 {
+  font-size: 12px;
+  font-weight:400;
+  margin: auto;
+}
+
+.bottomOfCard > h5 {
+  font-weight: 400;
+}
+
+a {
+  color: inherit;
+}
+
+.aboutBorker {
+  width: 900px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid darkgray;
+  background-color: #f1f3f7;
+  border-radius: 3px;
+  min-height: 200px;
+  flex-direction: column;
+}
+
+.aboutBorker > div {
+  margin: auto;
+}
+
+.marquee {
+  width: 888px;
+  border-bottom: 1px solid darkgray;
+  background-color: #f6f7f9;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 12px;
+}
+
+.marquee > h1 {
+  margin-left: 8px;
+  font-size: 22px;
+  font-weight: 600;
+  color: #4b4f56;
+}
+
+.aboutList {
+  background-color: white;
+  min-height: 250px;
+  width: 640px;
+  border-left: 1px solid darkgray;
+  border-right: 1px solid darkgray;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.aboutList > p {
+  margin:auto;
+  font-size: 14px;
+  text-rendering: optimizeLegibility;
+  color: #4b4f56;
 }
