--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -39,7 +39,7 @@
   // float: left;
   width: 160px;
   height: 160px;
-  z-index: 10;
+  z-index: 7;
   display: flex;
 }
 
@@ -272,4 +272,20 @@ a {
   font-size: 14px;
   text-rendering: optimizeLegibility;
   color: #4b4f56;
+}
+
+.updateProfileButton {
+  margin: 0 0 0 550px;
+  background: linear-gradient(#61a14e, #5c9448);
+  // background-color: #5d984a;
+  width: 180px;
+  height: 30px;
+  font-family: sans-serif;
+  font-size: 16px;
+  color: white;
+  font-weight: 700;
+  border: 1px solid #2d5115;
+  border-radius: 7px;
+  text-shadow: 1px 1px #000000;
+  box-shadow: 0 0 0 0px #95d67b, inset 0px 1px 2px 0px #fff;
 }
