--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -45,7 +45,7 @@
 }
 
 .commentContainer {
-  background-color: lightgray;
+  background-color: #f2f3f5;
   min-height: 60px;
   margin-top: 5px;
   padding-top: 10px;
