--- a/app/assets/stylesheets/friendship_button.scss
+++ b/app/assets/stylesheets/friendship_button.scss
@@ -1,7 +1,20 @@
 .friendshipButton {
   height: 30px;
-  width: 115px;
-  background-color: red;
-  border: 1px solid green;
-  border-radius: 3px;
+  width: 100px;
+  // background-color: red;
+  // border: 1px solid green;
+  // border-radius: 3px;
+  // margin-right: 4px;
+  background: linear-gradient(#4266b2, #4267b2);
+  // background-color: #5d984a;
+  // width: 200px;
+  // height: 38px;
+  // font-family: sans-serif;
+  font-size: 13px;
+  color: white;
+  font-weight: 400;
+  border: 1px solid #2d5115;
+  border-radius: 7px;
+  text-shadow: 1px 1px #000000;
+  box-shadow: 0 0 0 0px #95d67b, inset 0px 1px 2px 0px #fff;
 }
