add friend index items and front end search on profile, add user search to nav bar and backend, add user cards

--- a/app/assets/stylesheets/newsfeed.scss
+++ b/app/assets/stylesheets/newsfeed.scss
@@ -1,7 +1,7 @@
 .newsFeedContainer {
   width: 900px;
   margin: auto;
-  margin-top: 12px;
+  // margin-top: 12px;
 }
 
 // .newsFeedHead {
@@ -13,5 +13,6 @@
 // }
 
 .newsFeedPosts {
-  // margin-top: 12px;
+  // margin-top: 48px;
+  padding-top: 70px;
 }
