--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
       window.fb3 = "<%= image_url('fb_icons/fb3.png') %>"
       window.photoIcon = "<%= image_url('fb_icons/photoicon.png') %>"
       window.introIcon = "<%= image_url('fb_icons/bone_icon.png') %>"
+      window.searchDogTrans = "<%= image_url('fb_icons/transparent_search_dog.PNG') %>"
+      window.searchDogWhite = "<%= image_url('fb_icons/white_search_dog.JPG') %>"
     </script>
 
 
