--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -2,10 +2,12 @@
   // display: flex;
   height: 42px;
   border-bottom: 1px solid darkblue;
-  width: auto;
+  width: 100%;
   // justify-content: center;
   background-color: #4267b2;
+  position: fixed;
   // align-items: center;
+  z-index: 15;
 
 }
 
@@ -81,4 +83,53 @@
 
 a {
   text-decoration: none;
+}
+
+.searchIcon {
+  height: 26px;
+  width: 43px;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.searchContainer {
+  display: flex;
+  align-items: center;
+}
+
+.searchBar {
+  height: 20px;
+  width: 200px;
+  // border-radius: 2px;
+  // border: none
+}
+
+// .searchBar.active > img {
+//   background-color: blue;
+// }
+
+.searchCard {
+  width: 205px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  // float: left;
+  position: relative;
+  overflow-y: auto;
+}
+
+.searchCardAvi {
+  height: 30px;
+  width: 30px;
+}
+
+.searchResults {
+   position: absolute;
+   border-radius: 1px;
+}
+
+.searchName {
+  margin-left: 10px;
+  color: #4266b2;
 }
