add hover styling to most clickable things, css touch ups

--- a/app/assets/stylesheets/friendship_button.scss
+++ b/app/assets/stylesheets/friendship_button.scss
@@ -5,8 +5,8 @@
   // border: 1px solid green;
   // border-radius: 3px;
   // margin-right: 4px;
-  background: linear-gradient(#4266b2, #4267b2);
-  // background-color: #5d984a;
+  // background: linear-gradient(#4266b2, #4267b2);
+  background-color: #4266b2;
   // width: 200px;
   // height: 38px;
   // font-family: sans-serif;
@@ -17,4 +17,8 @@
   border-radius: 7px;
   text-shadow: 1px 1px #000000;
   box-shadow: 0 0 0 0px #95d67b, inset 0px 1px 2px 0px #fff;
+}
+
+.friendshipButton:hover {
+  background-color: #3B5998;
 }
