--- a/app/assets/stylesheets/comment_form.scss
+++ b/app/assets/stylesheets/comment_form.scss
@@ -24,14 +24,22 @@
 
 .commentText {
   width: 500px;
-  height: 24px;
-  text-align: right;
-  border-radius: 3px;
+  height: 18px;
+  // text-align: right;
+  border-radius: 18px;
+  border: 1px solid lightgray;
+
   padding: 5px;
-  font-size: 16px;
-  caret-color: transparent;
+  // margin-right: 15px;
+  text-indent: 9px;
+  font-size: 13px;
+  // caret-color: transparent;
   // padding-top: 8px;
 
+}
+
+.commentText:focus {
+  outline-width: 0;
 }
 
 .commentForm {
