--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -16,6 +16,7 @@
   border-bottom: 1px solid lightgray;
   // border-radius: 3px;
   padding: 6px;
+  box-shadow: 25px;
 }
 
 .postHeader {
@@ -52,7 +53,7 @@
   margin: 5px 0 0 0;
   // background: linear-gradient(#4265b2, #3b5da9);
   background-color: #4266b2;
-  opacity: .4;
+  opacity: .58;
   width: 502px;
   height: 30px;
   font-family: sans-serif;
@@ -63,4 +64,8 @@
   border-radius: 2px;
   text-shadow: 1px 1px #000000;
   box-shadow: 0 0 0 0px #95d67b, inset 0px 1px 2px 0px #fff;
+}
+
+.postButtonGray:focus {
+  outline-width: 0;
 }
