search drop down touch up, add about icons, and bork post icon

--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -69,3 +69,12 @@
 .postButtonGray:focus {
   outline-width: 0;
 }
+
+.borkPost {
+  height: 28px;
+  width: 28px;
+}
+
+.borkPostTop {
+  display: flex;
+}
