--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <!-- add all images to window.staticAssets object -->
     <script type="text/javascript">
       window.splashimage1 = "<%= image_url('babe/emma_splash1.jpeg') %>"
       window.splashimage2 = "<%= image_url('babe/emma_splash2.png') %>"
@@ -23,6 +24,17 @@
       window.introIcon = "<%= image_url('fb_icons/bone_icon.png') %>"
       window.searchDogTrans = "<%= image_url('fb_icons/transparent_search_dog.PNG') %>"
       window.searchDogWhite = "<%= image_url('fb_icons/white_search_dog.JPG') %>"
+      window.borkPostIcon = "<%= image_url('fb_icons/dog_bork_icon.png') %>"
+      window.staticAssets = {
+        cakeIcon: "<%= image_url('fb_icons/cake_icon.png') %>",
+        jobIcon: "<%= image_url('fb_icons/job-icon.png') %>",
+        houseIcon: "<%= image_url('fb_icons/home-icon.png') %>",
+        heartIcon: "<%= image_url('fb_icons/hearts.png') %>",
+        peopleIcon: "<%= image_url('fb_icons/users.svg') %>",
+        dogIcon: "<%= image_url('fb_icons/dog_icon.png') %>",
+        toyIcon: "<%= image_url('fb_icons/tug-toy-icon.png') %>",
+        dog2Icon: "<%= image_url('fb_icons/other_dog_icon.png') %>"
+      }
     </script>
 
 
