--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -103,26 +103,28 @@ a {
 .searchBar {
   height: 20px;
   width: 250px;
-  // border-radius: 2px;
-  // border: none
 }
 
-// .searchBar.active > img {
-//   background-color: blue;
-// }
+.searchBar:focus {
+  outline-width: 0;
+}
+
 
 .searchCard {
-  width: 255px;
+  width: 254px;
   height: 40px;
   display: flex;
   align-items: center;
   background-color: white;
-  // float: left;
   position: relative;
-  overflow-y: auto;
-  border-bottom: 1px solid lightgray;
+  border-left: 1px solid lightgray;
+  border-right: 1px solid lightgray;
 }
-
+.searchCard:last-of-type{
+  border-bottom: 1px solid lightgray;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
 .searchCardAvi {
   height: 40px;
   width: 40px;
@@ -130,7 +132,6 @@ a {
 
 .searchResults {
    position: absolute;
-   border-radius: 1px;
 }
 
 .searchName {
