--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -72,6 +72,10 @@
   background-color: #f6f7f9
 }
 
+#profileBar > a > span:hover {
+  background-color: #f6f7f9
+}
+
 #profileBar > span {
   background-color: white;
   height: 44px;
@@ -262,9 +266,10 @@ a {
 
 .aboutList {
   background-color: white;
-  padding-left: 120px;
+  padding-left: 65px;
+  padding-right: 65px;
   min-height: 250px;
-  width: 540px;
+  width: 590px;
   border-left: 1px solid darkgray;
   border-right: 1px solid darkgray;
   margin-top: 0;
@@ -295,4 +300,24 @@ a {
   border-radius: 7px;
   text-shadow: 1px 1px #000000;
   box-shadow: 0 0 0 0px #95d67b, inset 0px 1px 2px 0px #fff;
+}
+
+.lastProfileNavSpan {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: 44px;
+  width: 134px;
+  border-left: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  color: #365799;
+  font-family: sans-serif;
+  font-size: 15px;
+}
+
+.aboutIcon {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
 }
