--- a/app/assets/stylesheets/comment_form.scss
+++ b/app/assets/stylesheets/comment_form.scss
@@ -28,7 +28,7 @@
   // text-align: right;
   border-radius: 18px;
   border: 1px solid lightgray;
-
+  margin-left: 8px;
   padding: 5px;
   // margin-right: 15px;
   text-indent: 9px;
