--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -139,6 +139,10 @@ strong {
   align-items: center;
 }
 
+#uploadProfButton:hover {
+  cursor: pointer;
+}
+
 #coverProfButton {
   display: flex;
   float: left;
@@ -156,6 +160,7 @@ strong {
   border-radius: 3px;
   border-collapse: collapse;
   opacity: .92;
+  cursor: pointer;
 }
 
 #coverPicUpdateButton{
@@ -300,6 +305,10 @@ a {
   border-radius: 7px;
   text-shadow: 1px 1px #000000;
   box-shadow: 0 0 0 0px #95d67b, inset 0px 1px 2px 0px #fff;
+}
+
+.updateProfileButton:hover {
+  cursor: pointer;
 }
 
 .lastProfileNavSpan {
