--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
         peopleIcon: "<%= image_url('fb_icons/users.svg') %>",
         dogIcon: "<%= image_url('fb_icons/dog_icon.png') %>",
         toyIcon: "<%= image_url('fb_icons/tug-toy-icon.png') %>",
-        dog2Icon: "<%= image_url('fb_icons/other_dog_icon.png') %>"
+        dog2Icon: "<%= image_url('fb_icons/other_dog_icon.png') %>",
+        likeOn: "<%= image_url('likeOn.png') %>",
+        likeOff: "<%= image_url('likeOff.png') %>",
       }
     </script>
 
